<resources>
    <string name="app_name">Aplicativo</string>
    <string name="sou_doutor">Sou doutor</string>
    <string name="sou_paciente">Sou paciente</string>
    <string name="bem_vindo_a">Bem-vindo(a)</string>
    <string name="data_de_nascimento">Data de nascimento</string>
    <string name="nome">Nome</string>
    <string name="precisaremos_de_alguns_dados">Precisaremos de alguns dados!</string>
    <string name="nome_">Nome:</string>
    <string name="data_de_nascimento_">Data de nascimento:</string>
    <string name="pr_ximo_passo">Próximo passo</string>
    <string name="name" />
    <string name="nome_1">Nome</string>
    <string name="seguinte">Seguinte</string>
    <string name="cadastre_se">Cadastre-se</string>
    <string name="login">Login</string>
    <string name="fa_a_login_ou_cadastre_se">Faça Login ou Cadastre-se</string>
    <string name="aba_pacientes">Aba Pacientes</string>
    <string name="meus_dados">Meus Dados</string>
    <string name="_27_03_2008">27/03/2008</string>
    <string name="example_email_com">example@email.com</string>
    <string name="_12_3456_7890">(12) 3456-7890</string>
    <string name="seguinte4">Seguinte</string>
    <string name="numero_de_telefone">Numero de Telefone:</string>
    <string name="email">Email:</string>
    <string name="nome12">Nome:</string>
    <string name="cadastro">Cadastro</string>
    <string name="fulano_de_tal_da_silva">Fulano de Tal da Silva</string>
    <string name="senha">Senha:</string>
    <string name="login1">Login</string>
</resources>