<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/background_paciente"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp"
        tools:ignore="MissingConstraints"/>

    <TextView
        android:id="@+id/textViewInfos"
        android:layout_width="282dp"
        android:layout_height="45dp"
        android:fontFamily="@font/kiwi"
        android:text="@string/fa_a_login_ou_cadastre_se"
        android:textSize="34sp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView"
        app:layout_constraintEnd_toEndOf="@+id/imageView"
        app:layout_constraintHorizontal_bias="0.465"
        app:layout_constraintStart_toStartOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.202"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/buttonLoginPaciente"
        android:layout_width="290dp"
        android:layout_height="52dp"
        android:textColor="#040404"
        android:backgroundTint="#FFD5D5"
        android:fontFamily="@font/duck"
        android:text="@string/login"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/imageView"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView"
        app:layout_constraintVertical_bias="0.631"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/buttonCadastroPaciente"
        android:layout_width="290dp"
        android:layout_height="52dp"
        android:textColor="#040404"
        android:backgroundTint="#FFD5D5"
        android:fontFamily="@font/duck"
        android:text="@string/cadastre_se"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/imageView"
        app:layout_constraintStart_toStartOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.772"
        tools:ignore="MissingConstraints" />
</androidx.constraintlayout.widget.ConstraintLayout>