<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/background_initial"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/Text_BemVindo"
        android:layout_width="280dp"
        android:layout_height="75dp"
        android:layout_marginTop="52dp"
        android:fontFamily="@font/kiwi"
        android:text="@string/bem_vindo_a"
        android:textSize="60sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="@+id/imageView2"
        app:layout_constraintTop_toTopOf="@+id/imageView2"
        app:layout_constraintVertical_bias="0.043" />

    <Button
        android:id="@+id/idbuttonPaciente"
        android:layout_width="255dp"
        android:layout_height="49dp"
        android:backgroundTint="#FFD5D5"
        android:fontFamily="@font/duck"
        android:text="@string/sou_paciente"
        android:textColor="#040404"
        android:textColorHighlight="#CC9191"
        android:textColorLink="#121212"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/imageView2"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.78" />

    <Button
        android:id="@+id/idbuttonMedico"
        android:layout_width="255dp"
        android:layout_height="49dp"
        android:backgroundTint="#FFD5D5"
        android:fontFamily="@font/duck"
        android:text="@string/sou_doutor"
        android:textColor="#040404"
        android:textColorHighlight="#CC9191"
        android:textColorLink="#121212"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/imageView2"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.873" />

</androidx.constraintlayout.widget.ConstraintLayout>